; ModuleID = '/home/carl/AnghaBench/kphp-kdb/text/extr_text-index.c_write_freq_int_array.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/text/extr_text-index.c_write_freq_int_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@write_freq_int_array.i_freq = internal global [256 x i32] zeroinitializer, align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*)* @write_freq_int_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_freq_int_array(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i32, align 4
  store i64* %0, i64** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %27, %1
  %5 = load i32, i32* %3, align 4
  %6 = icmp slt i32 %5, 256
  br i1 %6, label %7, label %30

7:                                                ; preds = %4
  %8 = load i64*, i64** %2, align 8
  %9 = load i32, i32* %3, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i64, i64* %8, i64 %10
  %12 = load i64, i64* %11, align 8
  %13 = icmp sgt i64 %12, 2147483647
  br i1 %13, label %14, label %15

14:                                               ; preds = %7
  br label %21

15:                                               ; preds = %7
  %16 = load i64*, i64** %2, align 8
  %17 = load i32, i32* %3, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i64, i64* %16, i64 %18
  %20 = load i64, i64* %19, align 8
  br label %21

21:                                               ; preds = %15, %14
  %22 = phi i64 [ 2147483647, %14 ], [ %20, %15 ]
  %23 = trunc i64 %22 to i32
  %24 = load i32, i32* %3, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds [256 x i32], [256 x i32]* @write_freq_int_array.i_freq, i64 0, i64 %25
  store i32 %23, i32* %26, align 4
  br label %27

27:                                               ; preds = %21
  %28 = load i32, i32* %3, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %3, align 4
  br label %4

30:                                               ; preds = %4
  %31 = call i32 @writeout(i32* getelementptr inbounds ([256 x i32], [256 x i32]* @write_freq_int_array.i_freq, i64 0, i64 0), i32 1024)
  ret void
}

declare dso_local i32 @writeout(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
